--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Barbearia Exemplo</h1>
         <nav>
             <ul>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#horario">Horário de Funcionamento</a></li>
+                <li><a href="#servicos oferecidos">Serviços</a></li>
+                <li><a href="#horarios disponíveis">Horário de Funcionamento</a></li>
                 <li><a href="#localizacao">Localização</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
@@ -25,7 +25,7 @@
             <li>Corte de cabelo</li>
             <li>Barba</li>
             <li>Depilação facial</li>
-            <li>Tratamento capilar</li>
+            <li>Tratamento capilar especializado</li>
         </ul>
     </section>
 
