--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Exemplo</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Adicione um arquivo CSS para estilização aqui -->
+    <link rel="stylesheet" href="style.css"> <!-- Adicione um arquivo CSS para estilização aqui -->
 </head>
 <body>
     <header>
