--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Barbearia Exemplo</h1>
+        <link rel="stylesheet" type="text/css" href="seuarquivo.css">
+        <h1 class="vermelho">Barbearia Exemplo</h1>
+        
         <nav>
             <ul>
                 <li><a href="#servicos oferecidos">Serviços</a></li>
