--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" type="text/css" href="seuarquivo.css">
-        <h1 class="vermelho">Barbearia Exemplo</h1>
+        <h1 class="vermelho">Barbearia Exemplo editado</h1>
         
         <nav>
             <ul>
