--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <h1 class="vermelho">Barbearia Exemplo</h1>
+        <h1 class="color">Barbearia Exemplo</h1>
         
         
         <nav>
