--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <h1 class="color">Barbearia Exemplo</h1>
-        
+        <h1 style="color: red;">Barbearia Exemplo</h1>
         
         <nav>
             <ul>
@@ -21,6 +19,8 @@
             </ul>
         </nav>
     </header>
+</html>
+
 
     <section id="servicos">
         <h2>Serviços Oferecidos</h2>
