--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li>Barba</li>
             <li>Depilação facial</li>
             <li>Tratamento capilar especializado</li>
+            <p class="frase-especial">Você é top demais</p>
+
         </ul>
     </section>
 
