--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         </nav>
     </header>
 </html>
+<section id="servicos">
+    <h2>Serviços Oferecidos</h2>
+    <ul>
+        <li>Corte de cabelo</li>
+        <li>Barba</li>
+        <li>Depilação facial</li>
+        <li>Tratamento capilar especializado</li>
+    </ul>
+    <img src="https://www.segredosdesalao.com.br/dw/image/v2/AAFM_PRD/on/demandware.static/-/Sites-segredosdesalao-br-Library/default/dwb8cca237/images/blog/blog-article/258890-adicione-um-risco-ao-cabelo-masculino-co-orig-3.jpg?sw=2000&q=70" alt="">
+    <p class="frase-especial">Você é top demais</p>
+</section>
 
 
     <section id="servicos">
