--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="imagem-container">
         <img src="imagem1.jpg" alt="Imagem 1">
     </div>
-    <div class="imagem-container">
+            <img src="https://www.segredosdesalao.com.br/dw/image/v2/AAFM_PRD/on/demandware.static/-/Sites-segredosdesalao-br-Library/default/dwb8cca237/images/blog/blog-article/258890-adicione-um-risco-ao-cabelo-masculino-co-orig-3.jpg?sw=2000&q=70" alt="">
+            <div class="imagem-container">
         <img src="imagem2.jpg" alt="Imagem 2">
     </div>
     <div class="imagem-container">
