--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 
     </div>
 </section>
+<section id="imagens" class="grid-container">
+    <div class="imagem-container">
+        <img src="imagem1.jpg" alt="Imagem 1">
+    </div>
+    <div class="imagem-container">
+        <img src="https://www.segredosdesalao.com.br/dw/image/v2/AAFM_PRD/on/demandware.static/-/Sites-segredosdesalao-br-Library/default/dwb8cca237/images/blog/blog-article/258890-adicione-um-risco-ao-cabelo-masculino-co-orig-3.jpg?sw=2000&q=70" alt="Imagem 2">
+    </div>
+    <div class="imagem-container">
+        <img src="imagem3.jpg" alt="Imagem 3">
+    </div>
+</section>
+
 
 
     <section id="servicos">
